--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/li0t/fx-parser.git"
+    "url": "git+https://github.com/li0t/fx-solve.git"
   },
   "keywords": [
     "formulas",
@@ -17,9 +17,9 @@
   "author": "li0t",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/li0t/fx-parser/issues"
+    "url": "https://github.com/li0t/fx-solve/issues"
   },
-  "homepage": "https://github.com/li0t/fx-parser#readme",
+  "homepage": "https://github.com/li0t/fx-solve#readme",
   "dependencies": {
     "fi-is": "^4.0.0",
     "lodash.get": "^4.4.2",
