--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
         "sourceMap": true,
         "module": "commonjs",
         "target": "es6",
+        "lib": ["es2017", "dom"]
     },
+
     "include": [
         "./src/**/*"
     ]
