--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "preversion": "npm run build",
+    "preversion": "npm test && npm run build",
     "postversion": "npm publish",
     "build": "tsc && git add . && git commit -m 'Update dist'",
     "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register src/**/*.spec.ts"
   },
   "repository": {
     "type": "git",
@@ -31,5 +31,13 @@
     "mathjs": "^6.6.2",
     "parse5": "^5.1.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^7.0.2",
+    "chai": "^4.2.0",
+    "mocha": "^7.1.2",
+    "nyc": "^15.0.1",
+    "ts-node": "^8.10.1",
+    "typescript": "^3.8.3"
+  }
 }
