--- a/package.json
+++ b/package.json
@@ -9,7 +9,20 @@
     "postversion": "npm publish",
     "build": "tsc && git add . && git commit -m 'Update dist'",
     "start": "node dist/index.js",
-    "test": "mocha -r ts-node/register src/**/*.spec.ts"
+    "test": "mocha",
+    "coverage": "nyc npm test"
+  },
+  "nyc": {
+    "include": [
+      "scr/**/*.ts"
+    ],
+    "reporter": [
+      "text-summary",
+      "html",
+      "cobertura"
+    ],
+    "sourceMap": true,
+    "instrument": true
   },
   "repository": {
     "type": "git",
