--- a/package.json
+++ b/package.json
@@ -47,7 +47,11 @@
   "devDependencies": {
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
+    "@typescript-eslint/eslint-plugin": "^2.32.0",
+    "@typescript-eslint/parser": "^2.32.0",
     "chai": "^4.2.0",
+    "chance": "^1.1.5",
+    "eslint-plugin-mocha": "^6.3.0",
     "mocha": "^7.1.2",
     "nyc": "^15.0.1",
     "ts-node": "^8.10.1",
