--- a/package.json
+++ b/package.json
@@ -46,11 +46,13 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
+    "@types/json-schema": "^7.0.4",
     "@types/mocha": "^7.0.2",
-    "@typescript-eslint/eslint-plugin": "^2.32.0",
-    "@typescript-eslint/parser": "^2.32.0",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
     "chai": "^4.2.0",
     "chance": "^1.1.5",
+    "eslint": "^7.0.0",
     "eslint-plugin-mocha": "^6.3.0",
     "mocha": "^7.1.2",
     "nyc": "^15.0.1",
